# tszip

./: .mergify.yml  .pep8speaks.yml  .pre-commit-config.yaml  .pyup.yml  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  a_new_file.py  appveyor.yml  prek.toml  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: docs.yml  lint.yml  tests.yml  wheels.yml  zarr-v2-compat.yml
.github/workflows/docker/: buildwheel.sh  shared.env
docs/: Makefile  _config.yml  _toc.yml  changelog.md  changelog.rst  cli.md  cli.rst  conf.py  development.md  development.rst  index.md  index.rst  installation.md  installation.rst  introduction.rst  python-api.md  python-api.rst  rtd_requirements.txt
docs/_static/: GIT_MARKER
requirements/: CI-docs.txt  CI-tests-conda.txt  conda-minimal.txt  development.txt
tests/: test_cli.py  test_compression.py  test_legacy.py  test_provenance.py  zarr_cross_version_helper.py
tests/files/: 1.0.0.trees  1.0.0.trees.tsz  issue95_metadata_bug.tsz  issue95_metadata_dtype.trees
tscompress/: __init__.py  __main__.py  cli.py  compression.py
tszip/: __init__.py  __main__.py  _zarr_compat.py  cli.py  compat.py  compression.py  exceptions.py  provenance.py
