[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tszip"
authors = [
    {name = "Tskit Developers", email = "admin@tskit.dev"},
]
description = "Compression utilities for tree sequences"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Other Environment",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
]
keywords = ["tree sequence", "tskit"]
dependencies = [
    "numpy",
    "humanize",
    "tskit>=0.3.3",
    "numcodecs>=0.6.4",
    "zarr>=2.17,<4",
]
dynamic = ["version"]

[project.urls]
Homepage = "http://pypi.python.org/pypi/tszip"
Documentation = "https://tszip.readthedocs.io/en/latest/"
Changelog = "https://tszip.readthedocs.io/en/latest/changelog.html"
"Bug Tracker" = "https://github.com/tskit-dev/tszip/issues"
GitHub = "https://github.com/tskit-dev/tszip/"

[project.scripts]
tszip = "tszip.cli:tszip_main"
tsunzip = "tszip.cli:tsunzip_main"

[project.optional-dependencies]
test = [
    "humanize==4.13.0",
    "h5py==3.14.0",
    "msprime==1.3.4",
    "pytest==8.4.2",
    "pytest-cov==6.3.0",
    "pytest-xdist==3.8.0",
    "tskit==0.6.4",
    "zarr==2.18.3; python_version == '3.10'",
    "zarr==3.1.2; python_version >= '3.11'",
    "numcodecs>=0.6,<0.15.1", #Pinned due to https://github.com/zarr-developers/numcodecs/issues/733
]
docs = [
    "humanize==4.13.0",
    "jupyter-book==1.0.4.post1",
    "sphinx-issues==5.0.1",
    "sphinx-argparse==0.5.2",
    "setuptools_scm==9.2.0",
    "tskit==0.6.4",
    "zarr==3.1.2",
    "numcodecs>=0.6,<0.15.1", #Pinned due to https://github.com/zarr-developers/numcodecs/issues/733
]
dev = [
    "codecov",
    "coverage",
    "flake8",
    "h5py",
    "jupyter-book",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "sphinx-argparse",
    "sphinx_rtd_theme",
    "sphinx-issues",
    "setuptools_scm",
    "tskit",
    "zarr",
    "msprime",
    "humanize",
]

[tool.setuptools]
packages = ["tszip"]
include-package-data = true

[tool.setuptools_scm]
write_to = "tszip/_version.py"

[tool.pytest.ini_options]
addopts = "-n 4"
testpaths = ["tests"]
