[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tszip"
authors = [
    {name = "Tskit Developers", email = "admin@tskit.dev"},
]
description = "Compression utilities for tree sequences"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Other Environment",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["tree sequence", "tskit"]
dependencies = [
    "numpy",
    "humanize",
    "tskit>=1.0.0",
    "zarr>=3.1",
]
dynamic = ["version"]

[project.urls]
Homepage = "http://pypi.python.org/pypi/tszip"
Documentation = "https://tszip.readthedocs.io/en/latest/"
Changelog = "https://tszip.readthedocs.io/en/latest/changelog.html"
"Bug Tracker" = "https://github.com/tskit-dev/tszip/issues"
GitHub = "https://github.com/tskit-dev/tszip/"

[project.scripts]
tszip = "tszip.cli:tszip_main"
tsunzip = "tszip.cli:tsunzip_main"

[dependency-groups]
test = [
    "h5py",
    "humanize",
    "msprime",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "tskit",
    "zarr",
]
docs = [
    "humanize",
    "jupyter-book",
    "setuptools_scm",
    "sphinx-argparse",
    "sphinx-issues",
    "tskit",
    "zarr",
]
dev = [
    "codecov",
    "coverage",
    "flake8",
    "h5py",
    "humanize",
    "jupyter-book<2",
    "msprime",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "setuptools_scm",
    "sphinx-argparse",
    "sphinx-issues",
    "sphinx_rtd_theme",
    "tskit",
    "zarr",
]

[tool.setuptools]
packages = ["tszip"]
include-package-data = true

[tool.setuptools_scm]
write_to = "tszip/_version.py"

[tool.pytest.ini_options]
addopts = "-n 4"
testpaths = ["tests"]
