[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tszip"
authors = [
    {name = "Tskit Developers", email = "admin@tskit.dev"},
]
description = "Compression utilities for tree sequences"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Other Environment",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["tree sequence", "tskit"]
dependencies = [
    "numpy",
    "humanize",
    "tskit>=1.0.0",
    "zarr>=2.18,<3",
]
dynamic = ["version"]

[project.urls]
Homepage = "http://pypi.python.org/pypi/tszip"
Documentation = "https://tszip.readthedocs.io/en/latest/"
Changelog = "https://tszip.readthedocs.io/en/latest/changelog.html"
"Bug Tracker" = "https://github.com/tskit-dev/tszip/issues"
GitHub = "https://github.com/tskit-dev/tszip/"

[project.scripts]
tszip = "tszip.cli:tszip_main"
tsunzip = "tszip.cli:tsunzip_main"

[dependency-groups]
test = [
    "h5py",
    "humanize",
    "msprime",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "tskit",
    "zarr",
]

docs = [
    "humanize",
    "jupyter-book",
    "setuptools_scm",
    "sphinx-argparse",
    "sphinx-issues",
    "tskit",
    "zarr",
]

# Fully pin lint requirements for determinism.
lint = [
    "ruff==0.15.1",
    "prek==0.3.3",
]

packaging = [
  "twine",
  "validate-pyproject[all]"
]

dev = [
    {include-group = "docs"},
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "packaging"},
]

[tool.setuptools]
packages = ["tszip"]
include-package-data = true

[tool.setuptools_scm]
write_to = "tszip/_version.py"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
addopts = "-n 4"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 89
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I", "N", "UP", "A", "PT"]

ignore = [
    "A001", "A002", "RUF",
    "B905", #Don't add strict=False to zips (B905)
    "N818", # Exceptions not called "Error"
    "N806", "N802", "N803", # Various nags about uppercase vars
    "PT011", # pytest.raises(ValueError) too broad
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["tszip"]
known-third-party = [
  "msprime",
  "numpy",
  "pandas",
  "pytest",
  "zarr"
]
