[metadata]
name = tszip
author = Tskit Developers
author_email = admin@tskit.dev
license = MIT
description = Compression utilities for tree sequences
long_description_content_type = text/markdown
long_description = file: README.md
url = http://pypi.python.org/pypi/tszip
project_urls =
    Documentation = https://tszip.readthedocs.io/en/latest/
    Changelog = https://tszip.readthedocs.io/en/latest/changelog.html
    Bug Tracker = https://github.com/tskit-dev/tszip/issues
    GitHub = https://github.com/tskit-dev/tszip/
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Development Status :: 5 - Production/Stable
    Environment :: Other Environment
    Intended Audience :: Science/Research
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: MIT License
keywords =
    tree sequence
    tskit
platforms =
    POSIX
    Windows
    MacOS X

[options]
packages = tszip
python_requires = >=3.7
include_package_data = True
install_requires =
     numpy
     humanize
     tskit
     numcodecs
     zarr
setup_requires =
    setuptools_scm

[options.entry_points]
console_scripts =
    tszip =tszip.cli:tszip_main
    tsunzip =tszip.cli:tsunzip_main

[tool:pytest]
addopts = -n 4
testpaths =
    tests
